[gd_scene load_steps=8 format=3 uid="uid://iqc5bp3n72a0"]

[ext_resource type="Script" path="res://addons/nodot/characters/ThirdPerson/ThirdPersonCharacter.gd" id="1_vhcpw"]
[ext_resource type="Script" path="res://addons/nodot/characters/ThirdPerson/ThirdPersonCamera.gd" id="2_oac3o"]
[ext_resource type="Script" path="res://addons/nodot/characters/ThirdPerson/ThirdPersonKeyboardInput.gd" id="3_j23gj"]
[ext_resource type="Script" path="res://addons/nodot/characters/ThirdPerson/ThirdPersonMouseInput.gd" id="4_hvhp3"]
[ext_resource type="Script" path="res://addons/nodot/physics/GravityPhysics.gd" id="5_7yi3r"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_hxift"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_m1tjm"]

[node name="ThirdPersonCharacter" type="CharacterBody3D"]
script = ExtResource("1_vhcpw")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_hxift")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_m1tjm")

[node name="ThirdPersonCamera" type="Camera3D" parent="."]
script = ExtResource("2_oac3o")

[node name="ThirdPersonKeyboardInput" type="Node" parent="."]
script = ExtResource("3_j23gj")

[node name="ThirdPersonMouseInput" type="Node" parent="."]
script = ExtResource("4_hvhp3")

[node name="GravityPhysics" type="Node" parent="."]
script = ExtResource("5_7yi3r")
